// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can show SearchField (checked) 1`] = `
<input
  checked={true}
  className="checked"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Can show SearchField 1`] = `
<input
  checked={undefined}
  className="unchecked"
  onChange={[Function]}
  type="checkbox"
/>
`;
